# bytecord

./: .rultor.yml  Cargo.toml  README.md
.github/workflows/: cargo.yml
src/: builder.rs  lib.rs  reader.rs
